@@ -67,8 +67,9 @@ public class SecurityConfig {
         config.setAllowCredentials(false);
         // Allow dev frontend with pattern matching (no credentials needed for public API)
         config.setAllowedOriginPatterns(List.of("*"));
-        config.setAllowedOrigins(List.of(
-                "https://shoe-shop-front-end-flax.vercel.app/"
+        config.setAllowedOriginPatterns(Arrays.asList(
+                "http://localhost:3000",
+                "https://shoe-shop-front-end-flax.vercel.app"
         ));
         config.setAllowedOriginPatterns(Arrays.asList(
         "http://localhost:3000", 
@@ -93,12 +94,3 @@ public class SecurityConfig {
         return config.getAuthenticationManager();
     }
 }
-
-
-
-
-
-
-
-
-
